# 100xdevs

./: .gitignore  .gitmodules  Readme.md
anchor-calculator/: Anchor.toml  Readme.md
anchor-calculator/tests/: calculator.ts
better-uptime-rust/: Cargo.toml  Readme.md
better-uptime-rust/api/: Cargo.toml
better-uptime-rust/api/src/: main.rs
class_contract_for_cpi/: Cargo.toml  Readme.md
class_contract_for_cpi/src/: lib.rs
cpi_in_solana/: Cargo.toml  Readme.md
cpi_in_solana/0-program-double/: Readme.md
cpi_in_solana/0-program-double/client/: index.test.ts
cpi_in_solana/1-program-cpi/: Cargo.toml
cpi_in_solana/1-program-cpi-test/: README.md  index.test.ts  package.json
cpi_in_solana/client/: index.test.ts
cpi_in_solana/cpi-on-pda/: Cargo.toml
cpi_in_solana/cpi-on-pda-test/: README.md  index.test.ts  package.json
cpi_in_solana/src/: lib.rs
cpis-on-pdas/: Cargo.toml  Readme.md
cpis-on-pdas/client/: README.md  index.test.ts
cpis-on-pdas/src/: lib.rs
macros/: Cargo.toml  Readme.md
macros/src/: main.rs
name-client/: .gitignore  README.md  index.ts  package.json
name-contract/: Cargo.toml
name-contract/src/: lib.rs
native-calculator-program/: Cargo.toml
native-calculator-program/client/: index.test.ts
native-calculator-program/src/: lib.rs
native_contract/: Cargo.toml  Readme.md
native_contract/src/: lib.rs
native_contract_test_litesvm/: README.md  index.test.ts  index.ts  package.json
rustlings/: .gitignore
rustlings/exercises/: intro1
staking/: Anchor.toml
staking/tests/: staking.ts
(+19 files in other folders)
