cargo-features = ["edition2024"]
[package]
name = "native_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
solana-account-info = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-pubkey = "2.2.1"
solana-program = "2.2.1"

[lib]
crate-type = ["lib", "cdylib"]
